# global-game-jam-2024

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
assets/: duck.ans  print.py  prompts.csv  prompts.txt
assets/ascii/: duck.txt  keyboard.txt
client/: .env.development  .env.production  README.md  package-lock.json  package.json  tailwind.config.js
client/public/: index.html  manifest.json
client/src/: events.ts  index.css  index.tsx
client/src/components/: AnswerLengthIndicator.tsx  DisplayAnswers.tsx  FullScreenStage.tsx  Header.jsx  Header.tsx  MainPageBackground.tsx  NavBar.tsx  NavButton.tsx  PromptList.tsx  RealHeader.tsx  SingleLetterIndicator.tsx  TeamAndSideIndicator.tsx  TeamDisplay.tsx
client/src/constants/: keyboard.ts
client/src/data/: UserData.d.ts  keyBuffer.d.ts  keyPress.d.ts  roundOver.d.ts  submission.d.ts
client/src/gamestates/: GameState.ts  RoundState.tsx  WaitingForNextRound.tsx  WaitingForPlayers.tsx
client/src/layouts/: MainLayout.tsx
client/src/pages/: MainPage.tsx  routes.tsx
docs/: example-json.md  usage.md
docs/client/: yarn.md
docs/server/: example-json.md  usage.md
server/: connections.py  gameloop.py  main.py  parse-prompts.py  parse-prompts.py.orig  parse_prompts.py
