[project]
name = "global-game-jam-2024"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "fjebaker", email = "fergusbkr@gmail.com"},
]
dependencies = [
    "fastapi",
    "websockets",
    "uvicorn",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
fmt = "black"
serve = "uvicorn server.main:app"
debug = "uvicorn server.main:app --reload"

[tool.pdm.dev-dependencies]
dev = [
    "black",
    "jedi",
]
